--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,7 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.4.3/pixi.min.js'></script>
   <script src='keypress.js'></script>
-
-
-  <!-- <img src='/car.png' /> -->
+  <!-- <object id="svg" display='none' data="/images/index.svg" type="image/svg+xml"></object> -->
   <link rel="stylesheet" href="/style.css" />
   <script defer src="/bundle.js"></script>
 
